force-app/main/default/objects/BGBL__Query__c/BGBL__Query__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Query definitions including fields, where clause, etc</description>
    <label>Letter Query</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>