force-app/main/default/objects/BGBL__Query__c/fields/BGBL__Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>BGBL__Object_Fields__c</fullName>
    <inlineHelpText>Field names should be comma-separated and use full API name (e.g., "__c" for custom fields)

Example:  
  Id, Name, BillingStreet, BillingCity, CustomField__c</inlineHelpText>
    <label>Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>