force-app/main/default/objects/BGBL__Query__c/fields/BGBL__ORDER_BY_Direction__c.field-meta.xml
<CustomField>
    <fullName>BGBL__ORDER_BY_Direction__c</fullName>
    <label>ORDER BY Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ascending</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>