force-app/main/default/objects/BGBL__Query__c/fields/BGBL__ORDER_BY_Direction_Short__c.field-meta.xml
<CustomField>
    <fullName>BGBL__ORDER_BY_Direction_Short__c</fullName>
    <formula>IF
(
TEXT( BGBL__ORDER_BY_Direction__c ) == "Ascending",
"ASC",
"DESC"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ORDER BY Direction (Short). eg. ASC or DESC</inlineHelpText>
    <label>ORDER</label>
    <type>Text</type>
</CustomField>