force-app/main/default/objects/BGBL__Query__c/fields/BGBL__WHERE_Filter__c.field-meta.xml
<CustomField>
    <fullName>BGBL__WHERE_Filter__c</fullName>
    <inlineHelpText>eg. Region__c = 'East' AND ModifiedDate = LAST_YEAR</inlineHelpText>
    <label>WHERE Filter</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>