force-app/main/default/objects/BGBL__Query__c/validationRules/BGBL__Fields_id.validationRule-meta.xml
<ValidationRule>
    <fullName>BGBL__Fields_id</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(CONTAINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , " ",""), ",ID,"),BEGINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , " ",""), "ID,"),CONTAINS(SUBSTITUTE(UPPER(BGBL__Object_Fields__c) , " ",""), ",ID")))</errorConditionFormula>
    <errorMessage>Query fields must include id field in list</errorMessage>
</ValidationRule>